--- a/gazebo_grasp_plugin/package.xml
+++ b/gazebo_grasp_plugin/package.xml
@@ -9,12 +9,10 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <maintainer email="jennifer.e.buehler@gmail.com">Jennifer Buehler</maintainer>
 
-
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
   <license>GPLv3</license>
-
 
   <!-- Url tags are optional, but mutiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
@@ -25,20 +23,17 @@
   <!-- Authors do not have to be maintianers, but could be -->
   <author email="jennifer.e.buehler@gmail.com">Jennifer Buehler</author>
 
-
-  <!-- The *_depend tags are used to specify dependencies -->
-  <!-- Dependencies can be catkin packages or system dependencies -->
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
   <build_depend>gazebo_ros</build_depend>
   <build_depend>gazebo</build_depend>
   <build_depend>geometry_msgs</build_depend>
-  <build_depend>roscpp</build_depend>
+  <build_depend>rclcpp</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>gazebo_version_helpers</build_depend>
   <run_depend>gazebo_ros</run_depend>
   <run_depend>gazebo</run_depend>
   <run_depend>geometry_msgs</run_depend>
-  <run_depend>roscpp</run_depend>
+  <run_depend>rclcpp</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>gazebo_version_helpers</run_depend>
 
